# charmed-hpc-benchmarks

./: .editorconfig  .gitignore  .woke.yml  .wokeignore  CONTRIBUTING.md  README.md  SECURITY.md  justfile  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yaml
checks/gpu/gpu_burn/: gpu_burn.py
checks/io/fio/: fio.py
checks/mpi/imb/: imb.py
checks/mpi/osu/: osu.py
checks/slurm/slurmdbd/: slurmdbd.py
checks/slurm/slurmrestd/: slurmrestd.py
config/: azure_config.py
scripts/azure/: README.md  main.tf  run_azure.sh
